# media_revisor

./: .markdownlint.jsonc  README.md  pyproject.toml  run_media_revisor.bat  run_media_revisor.sh  spec.md
docs/tecnica/: README.md
docs/usuario/: README.md
media_revisor/: __init__.py  __main__.py  file_operations.py  main_window.py  models.py  scanner.py  theme.py
tests/: test_core.py  test_gui.py
