[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-revisor"
version = "0.1.0"
description = "Keyboard-driven multimedia review application"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
media-revisor = "media_revisor.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["media_revisor*"]